--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
         <p>My Name Is Nwosu Chinenyenwa I Am Into Front-End Development I Started My Journey At
              Ighub A Hub That improve's Computer Skills And Also Adding Coding Skills LIke Learning Various Track Like Front-end Development,
               Back-End Development, Cyber Security UI/UX, Digital Marketing e.t.c</p>
-        
-git i
             <a href="https://www.facebook.com/profile.php?id=61556460154920" target="_blank"><img class="pic" src="FB .jpg" alt=" facebook icon" ></a>
          <a href="https://whatsapp.com/dl/code=RrVqOGhSdh"target="_blank"><img class="pics" src="download.jpeg" alt=" business whatsapp icon"></a>
             <img class="pics" src="download (1).jpeg" alt="instagram icon">
         </section>
     </main>
 </div>
-</body>
+</bod>
 </html>
